--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.neighbour_list.NeighbourDetailActivity"></activity>
+        <activity android:name=".ui.neighbour_list.ActivityNeighbourDetail"></activity>
         <activity
-            android:name=".ui.neighbour_list.ListNeighbourActivity"
+            android:name=".ui.neighbour_list.ActivityListNeighbour"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
